--- a/shuk/musiclist.html
+++ b/shuk/musiclist.html
@@ -14,6 +14,7 @@
 <!-- TEMPLATE SONG-->
 <template name="song">
   <li class='{{is_current}}'>
+ 	
   <div class="song">
 	{{#if fbid}}
 		<img src="http://graph.facebook.com/{{fbid}}/picture"/>
@@ -27,9 +28,29 @@
     <ul class="actions">
    	  <li class="delete"><a href="javascript:void(0);"><i class="icon-remove"></i><a/></li>	  
 	  <li class="vote"><a href="javascript:void(0);"><i class="icon-thumbs-up"></i></a></li>
+	  <li class="copyto">
+		<div class="dropdown">
+		  <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-plus-sign"></i></a>
+		  {{>dropdown_playlist}}
+		</div> 
+	  </li>
 	</div>
   </div>
   </li>
+</template>
+
+<!-- TEMPLATE DROPPLAYLIST-->
+<template name="dropdown_playlist">
+	<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+		{{#each playlist}}
+			{{>item_dropdown_playlist}}
+		{{/each}}
+	</ul>
+</template>
+
+<!-- TEMPLATE DROPPLAYLIST-->
+<template name="item_dropdown_playlist">
+	<li class="dropdown-item-playlist"><a href="#">{{name}}</a></li>
 </template>
 
 <!-- TEMPLATE SHARES-->
