Agregado top ten y notificacions junto con el savetomylist

--- a/shuk/index.html
+++ b/shuk/index.html
@@ -24,10 +24,13 @@
   <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->  
-
 </head>
 
 <body>
+<div class="alert alert-success">
+  Esta es una alerta.
+</div>
+
 {{#if page_is "home"}}
 	{{> home}}
 {{/if}}	
