--- a/shuk/musiclist.html
+++ b/shuk/musiclist.html
@@ -26,7 +26,7 @@
 	<span class="title">{{title}}</span>
 	<div class="votes"><strong>Votes:</strong> {{score}}</div>
     <ul class="actions">
-   	  <li class="delete"><a href="javascript:void(0);"><i class="icon-remove"></i><a/></li>	  
+   	  <li class="delete"><a href="javascript:void(0);"><i class="icon-remove"></i></a></li>	  
 	  <li class="vote"><a href="javascript:void(0);"><i class="icon-thumbs-up"></i></a></li>
 	  <li class="copyto">
 		<div class="dropdown">
