--- a/shuk/sidebar.html
+++ b/shuk/sidebar.html
@@ -2,6 +2,7 @@
 <template name="sidebar">
 	<div id="sidebar">
 		{{>latestlist}}
+		{{>toptenlist}}
 	</div>
 </template>
 
@@ -17,5 +18,20 @@
 
 <!-- TEMPLATE LATESTITEM-->
 <template name="latestitem">
+	<li><a href="#">{{name}}</a></li>
+</template>
+
+<!-- TEMPLATE TOPTENLIST-->
+<template name="toptenlist">
+	<ul id="toptenlist">
+		<li class="list-header">Top Ten</li>
+		{{#each topten}}
+			{{>toptenitem}}
+		{{/each}}
+	</ul>
+</template>
+
+<!-- TEMPLATE TOPTENITEM-->
+<template name="toptenitem">
 	<li><a href="#">{{name}}</a></li>
 </template>
