Barra con imagenes y merge de cursores hecho

--- a/shuk/index.html
+++ b/shuk/index.html
@@ -1,6 +1,12 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SHUKBOX .:.:.</title>
+  <meta property="og:url" content="{{playlist_url}}">
+  <meta property="og:title" content="SHUKBOX .:.:.">  
+  <meta property="og:description" content="Search for free music to stream.  Listen to free music recommended by real people.  Create your own free internet radio station.">
+  <meta property="og:type" content="playlist">
+  <meta name="description" content="Search for free music to stream.  Listen to free music recommended by real people.  Create your own free internet radio station.">  
+  <meta name="keywords" content="free music, listen to music online, listen to free music, search music, discover music, music search, internet radio, online radio, free mp3, music search engine, streaming music, music playlist, shukbox, shukbox.com"> 
   <style>
   @media (min-width: 981px) {
     body {
@@ -8,6 +14,7 @@
     }
   } 
   </style>
+
   <link rel="stylesheet" type="text/css" href="css/styles.css" media="screen" />
   <script type="text/javascript">  
     var _gaq = _gaq || [];
@@ -38,15 +45,5 @@
 	{{> profile}}
 {{/if}}	
 </body>
-
-<!-- TEMPLATE METAS-->
-<template name="metas">
-	<meta property="og:url" content="{{playchannel_url}}">
-	<meta property="og:title" content="SHUKBOX .:.:.">	
-	<meta property="og:description" content="Search for free music to stream.  Listen to free music recommended by real people.  Create your own free internet radio station.">
-	<meta property="og:type" content="playlist">
-	<meta name="description" content="Search for free music to stream.  Listen to free music recommended by real people.  Create your own free internet radio station.">	
-	<meta name="keywords" content="free music, listen to music online, listen to free music, search music, discover music, music search, internet radio, online radio, free mp3, music search engine, streaming music, music playlist, shukbox, shukbox.com">	
-</template>
 
 
