Solucionado error de core

--- a/shuk/home.html
+++ b/shuk/home.html
@@ -16,7 +16,7 @@
 	</div>
 	
 	<div class="container">
-		<div id="mainnav" class="navbar navbar-fixed-top">
+		<div id="mainnav" class="navbar navbar-fixed-top navbar-inverse">
 		  <div class="navbar-inner">
 			<div class="container">
 			  <div class="span1">&nbsp;</div>
