Funciona el scroll infinito

--- a/shuk/shares.html
+++ b/shuk/shares.html
@@ -22,7 +22,7 @@
 <template name="search">
   <div id="search">
 	  <input placeholder="Search a video or paste youtube url!" class="nextsong" id="nextsong" type="text"/>
-	  <div id="videoResultsDiv"></div> 
+	  <div id="results"></div> 
   </div>
   {{on_ready_search}}
 </template>
