WIP. Nuevo layout

--- a/shuk/playlists.html
+++ b/shuk/playlists.html
@@ -1,6 +1,6 @@
 <!-- TEMPLATE PLAYLISTS-->
 <template name="playlists">
-	<div class="playlists">
+	<div class="playlists" style="display:none">
 	  {{#if signedup}}			  
 		<ul class="nav nav-list" id="mylists">
 			<li class="nav-header">My lists</li>
