--- a/shuk/home.html
+++ b/shuk/home.html
@@ -14,7 +14,7 @@
 	</div>
 	
 	<div class="container">
-		<div id="mainnav" class="navbar navbar-fixed-top navbar-inverse">
+		<div id="mainnav" class="navbar navbar-fixed-top navbar-inverse" style="display:none">
 		  <div class="navbar-inner">
 			<div class="container">
 			  <div class="span1">&nbsp;</div>
