--- a/shuk/musiclist.html
+++ b/shuk/musiclist.html
@@ -14,7 +14,7 @@
   <li class='{{is_current}}'>
  	
   <div class="video_item">
-	<img src="{{added_by.profile_image}}"/>
+	<img src="//i.ytimg.com/vi/{{vid}}/1.jpg"/>
 	<span class="title">{{title}}</span>
 	<div class="votes"><strong>Votes:</strong> {{score}}</div>
     <ul class="actions">
