--- a/shuk/home.html
+++ b/shuk/home.html
@@ -14,27 +14,14 @@
 	</div>
 	
 	<div class="container">
-		<div id="mainnav" class="navbar navbar-fixed-top navbar-inverse" style="display:none">
-		  <div class="navbar-inner">
-			<div class="container">
-			  <div class="span1">&nbsp;</div>
-			  <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			  </a>
-			  <div class="nav-collapse">
-			  {{> navbar}}
-			  </div><!--/.nav-collapse -->
-			</div>
-		  </div>
+		<div id="mainnav">
+			{{> navbar}}
 		</div>
 		<div class="row">
 		  <div class="span12">
 		    <div class="row">
-			  <div class="span1">&nbsp;</div>
-			  <div class="span3">
-				  <h1 class="logo"></h1>				  
+				<h1 class="logo"></h1>
+			  <div class="span3"> 				  
 				  {{> playlists}}
 			  </div>
 			  <div class="span6" style="padding-top:20px;">
@@ -45,7 +32,7 @@
 				{{> shares}}
 				{{> musiclist}}
 			  </div>
-			  <div class="span2">&nbsp;</div> 
+			  <div class="span3">&nbsp;</div> 
 			</div>
 		  </div>
 		</div>
