--- a/shuk/shares.html
+++ b/shuk/shares.html
@@ -21,7 +21,7 @@
 </template>
 <template name="search">
   <div id="search">
-	  <input placeholder="Search a video or paste youtube url!" class="nextsong" id="nextsong" type="text"/>
+	  <input placeholder="Search a video or paste youtube url!" class="nextsong" id="nextsong" type="text" autocomplete="off"/>
 	  <div id="results"></div> 
   </div>
   {{on_ready_search}}
