--- a/shuk/home.html
+++ b/shuk/home.html
@@ -14,6 +14,11 @@
 	</div>
 	
 	<div class="container">
+		<div id="activate-second-toolbar">
+			<a id="activate-second-toolbar-icon" href="#"><i class="icon-th-list icon-white"></i></a>
+			<span class="title">Your lists</span>
+			<span class="desc">Check Your Lists</span>
+		</div>
 		<div id="mainnav">
 			{{> navbar}}
 		</div>
@@ -26,9 +31,6 @@
 			  </div>
 			  <div class="span6" style="padding-top:20px;">
 				{{> search}}
-				<iframe id="player" width="100%" height="0" src="" frameBorder="0" scrolling="no" allowfullscreen></iframe>
-				<div id="player-div"></div>			  
-				{{> modifiers}}
 				{{> shares}}
 				{{> musiclist}}
 			  </div>
