--- a/shuk/home.html
+++ b/shuk/home.html
@@ -13,20 +13,15 @@
 	  </div>
 	</div>
 	
-	<div class="container">
-		<div id="activate-second-toolbar">
-			<a id="activate-second-toolbar-icon" href="#"><i class="icon-th-list icon-white"></i></a>
-			<span class="title">Your lists</span>
-			<span class="desc">Check Your Lists</span>
-		</div>
+	<div>
 		<div id="mainnav">
 			{{> navbar}}
 		</div>
-		<div class="row">
+		<div class="row-fluid">
 		  <div class="span12">
-		    <div class="row">
+		    <div class="row-fluid">
 				<h1 class="logo"></h1>
-			  <div class="span3"> 				  
+			  <div class="span3" style="margin-left:0px"> 				  
 				  {{> playlists}}
 			  </div>
 			  <div class="span6" style="padding-top:20px;">
